rewriting multi-user interface

--- a/VVeb.UQ/Dockerfile
+++ b/VVeb.UQ/Dockerfile
@@ -18,12 +18,12 @@ RUN apk --update add \
   php-apache2 php-cli php-json php-mbstring php-phar php-openssl \
   && chmod +x /usr/local/bin/wrapdocker \
   && rm -rf /var/cache/apk/* \
-  && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+  #&& curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
   && mkdir -p /var/www/html/ && chown -R apache:apache /var/www/html
 
 # --- Copy data
 COPY www/ /var/www/html/
-#COPY config.in /var/www/html/php/
+COPY config.in /var/www/html/php/
 COPY etc/apache2/httpd.conf /etc/apache2/httpd.conf
 COPY etc/apache2/sites/ /etc/apache2/sites/
 COPY etc/php/php.ini /etc/php7/php.ini
