--- a/VVeb.UQ/easyvvuq_container/Dockerfile
+++ b/VVeb.UQ/easyvvuq_container/Dockerfile
@@ -25,6 +25,7 @@ RUN git clone https://github.com/UCL-CCS/EasyVVUQ.git
 WORKDIR /easyvvuq_dir/EasyVVUQ
 RUN pip3 install wheel
 RUN pip3 install -r requirements.txt
+RUN pip3 install --upgrade setuptools
 RUN python3 setup.py install
 
 # --- Install Prominence
