Started work adapting VECMA interface for general use.

--- a/VVeb.UQ/www/interfaces/easyvvuq_main.sample
+++ b/VVeb.UQ/www/interfaces/easyvvuq_main.sample
@@ -1,70 +1,91 @@
 import os
 import easyvvuq as uq
 import chaospy as cp
+from dakota_file import DakotaFile
+from easyvvuq.encoders import BaseEncoder
+from definitions import *
 
-# --- Here is an example of what the key inputs  should look like
-run_script = 'run_script_easyvvuq.py'
-parameters = {
-    "var1": {
-        "type": "float",
-        "min": 0.0,
-        "max": 100000.0,
-        "default": 0.25
-    },
-    "var2": {
-        "type": "float",
-        "min": 0.0,
-        "max": 100000.0,
-        "default": 1.0
-    },
-    "var3": {
-        "type": "integer",
-        "min": 0,
-        "max": 100000,
-        "default": 10
-    },
-    "out_file": {
-        "type": "string",
-        "default": "easyvvuq_out.csv"
-    }
-}
-variations = {
-    "var1": cp.Uniform(1.0, 100.0),
-    "var2": cp.Uniform(1.0, 100.0),
-}
-n_samples = 4
+# Define a custom encoder to use to write varied data back to DakotaFile
+class VVebUQ_Encoder(BaseEncoder, encoder_name='VVebUQ_encoder'):
 
-# --- THIS ABOVE IS JUST AN EXAMPLE, NEW CODE LINES WILL REPLACE
-# --- the string just below in real app
+    def encode(self, params={}, target_dir=''):
+
+        input_file = '#FILENAME#'
+
+        # Read existing data file (need shapes)
+        user_file = DakotaFile( file_type = '#FILETYPE#' )
+        user_file.read( input_file )
+
+        # Format data in params into correct shapes and add valiues entries to file
+        self.parse_data( user_file, params )
+ 
+        # Write new data file with varied data
+        user_file.write( target_dir+'/'+input_file )
+        
+    def parse_data( self, user_file, params ):
+
+        # This is basically the same as in interface.py for DAKOTA
+
+        # Loop over uncertain variables and reconstruct data arrays
+        for key in user_file.uncertain.keys():
+
+            # Get the dataset for this variable
+            dataset = user_file.get_variable_as_dataset(key)
+
+            # Get the type of this variable
+            var_type = dataset.attrs['type']
+
+            # Get one of the required entries
+            var_name = allowed_variable_types[var_type]['required'][0]
+
+            var = dataset[var_name]
+
+            # Add new values variable to data array
+            dataset['values'] = deepcopy(var)
+
+            # Get size and shape of the data array
+            size  = var.size
+            shape = var.shape
+
+            data  = np.zeros( size )
+
+            for i in range( size ):
+
+                varname = key+'_'+str(i)
+                data[i] = params[varname]
+
+            values_data = data.reshape( shape )
+
+            # Add data to values data array
+            dataset.data_vars['values'].data = values_data
+
+# This line is overwritten with input data by easyvvuq_main.sample
+# This sets the parameters, variations and n_smaples variables
+
 #REPLACE_INPUTS_HERE
-
-
-
-
 
 # --- The usual (simple) easyVVUQ set-up
 
 # --- Setup some variables describing app to be run
-cwd = os.getcwd()
+cwd            = os.getcwd()
+run_script     = 'run_script_easyvvuq.py'
 input_filename = 'easyvvuq_in.json'
-out_file = "easyvvuq_out.csv"
-template = f"{cwd}/easyvvuq_input.template"
-cmd = f"{cwd}/{run_script} {input_filename}"
+out_file       = "easyvvuq_out.csv"
+template       = f"{cwd}/easyvvuq_input.template"
+cmd            = f"{cwd}/{run_script} {input_filename}"
 
 # --- Create campaign
 my_campaign = uq.Campaign(name='easyvvuq_campaign', work_dir=".")
 
 # --- Encoder for the input file
-encoder = uq.encoders.GenericEncoder(template_fname=template, target_filename=input_filename)
-
-# --- Decoder for the output file
-decoder = uq.decoders.SimpleCSV(target_filename=out_file, output_columns=['Step','Value'], header=0)
-
-# --- Collate fake results into fake average...
-collater = uq.collate.AggregateSamples(average=True)
+encoder = VVebUQ_Encoder(template_fname=template, target_filename=input_filename)
 
 # --- Define campaign
-my_campaign.add_app(name="run_script_easyvvuq", params=parameters, encoder=encoder, decoder=decoder, collater=collater)
+my_campaign.add_app(name="run_script_easyvvuq", params=parameters, encoder=encoder)
+
+# FIXME - WOULD BE GOOD TO HANDLE MORE THAN RANDOM SAMPLING
+# This would need to be handled in easyvvuq_main.sample in a similar replace way as above
+# May need to replace these lines for PCE/SC/QMC.
 
 # --- Specify Sampler
 my_sampler = uq.sampling.RandomSampler(vary=variations)
@@ -80,15 +101,3 @@ print(my_campaign)
 
 # --- Run Application with internal script
 my_campaign.apply_for_each_run_dir(uq.actions.ExecuteLocal(cmd, interpret='python3'))
-
-
-
-
-
-# --- Analysis steps are not needed
-# --- Collate output
-#my_campaign.collate()
-# --- Run Analysis
-#stats = uq.analysis.EnsembleBoot(groupby=["mu"], qoi_cols=["Value"])
-#my_campaign.apply_analysis(stats)
-#print("stats:\n", my_campaign.get_last_analysis())
